# lin-bus-sim

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: lin_frame.c  lin_frame.h
tests/: test_lin_sim.c
